tests/paczka1/fuzzy1/79974751.err
Error in line 8: vuiQ404GU S347 1,9
Error in line 14: S275 S347 68,7
Error in line 19: S2M5 S2M5 M4,2
Error in line 17: zuy8Xq A748 63,1
Error in line 18: S275 A653 29,5
Error in line 31: zuy8Xq A653 93,3
Error in line 22: S275 S275 218,1
